# spear

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yaml
doc/md/: Home_header.md
lib/: CMakeLists.txt
lib/spear/align/: bam_writer.cpp  bam_writer.hpp  cigar.hpp  read_record.hpp  wfa2.cpp  wfa2.hpp  wfa2_cigar.cpp  wfa2_cigar.hpp
lib/spear/inverted_index/: builder.hpp  format.hpp  hit_collector.hpp  index.hpp  pfor.cpp  pfor.hpp  stats.hpp  term_postings.hpp
lib/spear/reference/: collection.cpp  collection.hpp  functions.cpp  functions.hpp
lib/spear/seeding/: kmer_seeding.hpp  seed_filter.hpp
src/: main.cpp
src/commands/: map.hpp  tools.hpp
src/commands/map/: align.cpp  align.hpp  format.cpp  format.hpp  index.cpp  index.hpp
src/commands/tools/: citation.cpp  citation.hpp  license.cpp  license.hpp  version.cpp  version.hpp  wiki.cpp  wiki.hpp
src/options/: bam_writer_options.cpp  bam_writer_options.hpp  file_input.cpp  file_input.hpp  file_output.cpp  file_output.hpp  global.cpp  global.hpp  inverted_index_builder.cpp  inverted_index_builder.hpp  inverted_index_reader.cpp  inverted_index_reader.hpp  kmer_seeding_options.cpp  kmer_seeding_options.hpp  wfa2_options.cpp  wfa2_options.hpp
src/tools/: cli_formatter.hpp  cli_option.hpp  cli_setup.cpp  cli_setup.hpp  misc.cpp  misc.hpp  references.cpp  references.hpp  version.hpp
test/: CMakeLists.txt
test/src/: common.hpp  main.cpp
test/src/align/: bam_writer.cpp  cigar.cpp  wfa2.cpp  wfa2_cigar.cpp
test/src/inverted_index/: builder.cpp  hit_collector.cpp  index.cpp  pfor.cpp
test/src/reference/: collection.cpp
test/src/seeding/: kmer_seeding.cpp  seed_filter.cpp
tools/cmake/: IncludeCLI11.cmake  IncludeGenesis.cmake  IncludeTurboPFor.cmake  IncludeWFA2.cmake  update_dependencies.sh
